<resources>
    <string name="app_name">恐龙谷</string>
    <string name="action_settings">设置</string>
    <string name="login_button">登录</string>
    <string name="fast_register"><a>快速注册</a></string>
    <string name="forget_password">忘记密码</string>
    <string name="phone_number">手机号:</string>
    <string name="new_phone_number_tip">新手机号:</string>
    <string name="phone_number2">手机号</string>
    <string name="code_text_tip">验证码:</string>
    <string name="phone_number_hint">手机号码</string>
    <string name="password_hint">登录密码</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="get_code_text">获取验证码</string>
    <string name="next_text">下一步</string>
    <string name="register_warning">注册即表示同意</string>
    <string name="register_protocol">《恐龙谷用户协议》</string>
    <string name="register">注册</string>
    <string name="account_exception">你的账号已被暂停使用,请解锁后使用.</string>
    <string name="finish">完成</string>
    <string name="register_password_hint">6-16位长度</string>
    <string name="register_password_tip">密码:</string>
    <string name="register_add_ico">添加头像</string>
    <string name="register_name_tip">昵称:</string>
    <string name="register_name_hint">请输入昵称</string>
    <string name="nav_home_text">首页</string>
    <string name="nav_found_text">发现</string>
    <string name="nav_message_text">消息</string>
    <string name="nav_me_text">我</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="search">搜索</string>
    <string name="contacts">联系人</string>
    <string name="follower">粉丝</string>
    <string name="text_charm">魅力</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="add_follow">+关注</string>
    <string name="setting">设置</string>
    <string name="person_auth">我的身份</string>
    <string name="coin">龙币</string>
    <string name="level">等级</string>
    <string name="my_level">我的等级</string>
    <string name="my_coin">龙币</string>
    <string name="my_favor">我的收藏</string>
    <string name="my_status">我的动态</string>
    <string name="welcome">欢迎!</string>
    <string name="other_login">第三方登录</string>
    <string name="team_need_authentication">需要身份验证</string>
    <string name="team_allow_anyone_join">允许任何人加入</string>
    <string name="team_not_allow_anyone_join">不允许任何人申请加入</string>
    <string name="search_hint">搜索用户ID/昵称</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friend_format">我是%1$s</string>
    <string name="search_tip">搜索: </string>
    <string name="location_map">正在定位...</string>
    <string name="send">发送</string>
    <string name="recording_init_failed">录音初始化失败</string>
    <string name="record_audio_end">松开 结束</string>
    <string name="recording_cancel_tip">手指上滑,取消发送</string>
    <string name="recording_cancel">松开手指, 取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="record_audio">按住开始录音</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="register_fial_tip">注册失败:</string>
    <string name="recommend_focus_user">关注TA们吧</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="empty"></string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="ta_dynamic_state">TA的动态</string>
    <string name="me_dynamic_state">我的动态</string>
    <string name="default_empty_tip">暂无内容</string>
    <string name="default_empty_circle_tip">亲~您还没有关注用户!</string>
    <string name="add_contact_tip">我是 %1$s</string>
    <string name="default_empty_no_status_tip">亲~没有动态可以查看!</string>
    <string name="status_empty__tip">暂无动态</string>
    <string name="status_empty_his_tip">亲~该用户还没有发布过动态!</string>
    <string name="code_error_tip">请输入正确的验证码!</string>
    <string name="code_send_tip">验证码已发送, 请注意查收.</string>
    <string name="voice_code_send_tip">请注意接听语音验证码.</string>
    <string name="publish_image_empty_tip">至少需要发布一张图片.</string>
    <string name="school">校园</string>
    <string name="add_tag">添加标签</string>
    <string name="top">置顶</string>
    <string name="cancel_top">取消置顶</string>
    <string name="fav">收藏</string>
    <string name="cancel_fav">取消收藏</string>
    <string name="share_gps">公开地理位置</string>
    <string name="share">分享</string>
    <string name="add_tags_text">添加标签</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="not_save">不保存</string>
    <string name="tag_max_tip">最多3个标签!</string>
    <string name="tag_empty_tip">至少需要一个标签!</string>
    <string name="fetch_tag_failed">标签获取失败!</string>
    <string name="known">知道了</string>
    <string name="tip">提示</string>
    <string name="dynamic_top_tip">动态置顶是指该动态会在你的动态列表中,始终排列在第一位展示!</string>
    <string name="max_top_tip">你当前等级最多能置顶%1$s条动态,已达上限!</string>
    <string name="not_auth">未认证</string>
    <string name="auth_zcmr">职场名人</string>
    <string name="auth_ylmx">娱乐明星</string>
    <string name="auth_tyrw">体育人物</string>
    <string name="auth_zfry">政府人员</string>
    <string name="chat_empty_tip">亲~您还没有会话!</string>
    <string name="input_hint_tip">点击输入发送新消息</string>
    <string name="all">全部</string>
    <string name="see_all2">全文</string>
    <string name="tag_recommend">推荐</string>
    <string name="default_empty_nearby_tip">亲~附近还木有伙伴!</string>
    <string name="fetching">正在获取...</string>
    <string name="home_circle">圈子</string>
    <string name="is_circle">circle</string>
    <string name="is_circle2">circle2</string>
    <string name="not_circle">not_circle</string>
    <string name="home_recommend">推荐</string>
    <string name="home_nearby">附近</string>
    <string name="new_frient_text">新朋友</string>
    <string name="link_count_tip">%1$s个人赞过</string>
    <string name="delete_text">删除</string>
    <string name="delete_text_format">删除(%1$s)</string>
    <string name="see_all">查看全部</string>
    <string name="sex">性别</string>
    <string name="reply_cnt_tip">%1$s条回复</string>
    <string name="reply">回复</string>
    <string name="dynamic_input_hint">说点什么吧</string>
    <string name="dynamic_detail">动态详情</string>
    <string name="detail">详情</string>
    <string name="like_title">点赞</string>
    <string name="relation_title">共同关注</string>
    <string name="like_title_formater">点赞(%1$d)</string>
    <string name="publish_dynamic">发布动态</string>
    <string name="publish">发布</string>
    <string name="forward_dynamic">转发动态</string>
    <string name="forward_information">转发资讯</string>
    <string name="forward">转发</string>
    <string name="reward">打赏</string>
    <string name="reward_format">打赏 %1$s</string>
    <string name="fans_title">粉丝</string>
    <string name="followers_title">关注</string>
    <string name="cancel_followers">取消关注</string>
    <string name="cancel_friend">解除好友</string>
    <string name="back_pressed_tip">别按啦，恐龙君舍不得离开你！</string>
    <string name="dynamic_notify">动态通知</string>
    <string name="clear_all">清空</string>
    <string name="hot_information">热点资讯</string>
    <string name="invite_friends">邀请好友</string>
    <string name="invite_friends2">邀请有奖</string>
    <string name="scan_title">扫一扫</string>
    <string name="search_title">搜一搜</string>
    <string name="status">动态</string>
    <string name="ta_status">个人动态</string>
    <string name="men">男</string>
    <string name="secret">保密</string>
    <string name="ta_fans_title">TA的粉丝</string>
    <string name="ta_followers_title">TA的关注</string>
    <string name="not_see_status">不看TA的动态</string>
    <string name="report">举报</string>
    <string name="submit">提交</string>
    <string name="selector_report_tip">请选择举报理由</string>
    <string name="open_network_setting">打开网络设置</string>
    <string name="retry_refresh">刷新试试</string>
    <string name="refresh">刷新</string>
    <string name="no_selector_report_tip">请选择举报理由!</string>
    <string name="account_safe">帐号与安全</string>
    <string name="message_notify">消息通知</string>
    <string name="conceal">隐私</string>
    <string name="currency">通用</string>
    <string name="feedback">意见反馈</string>
    <string name="faq">常见问题</string>
    <string name="about_me">关于恐龙谷</string>
    <string name="user_agreement">用户协议</string>
    <string name="quit_login">退出登录</string>
    <string name="settting">设置</string>
    <string name="dialog_title_hint">提示</string>
    <string name="dialog_clear_cache_tip">是否清空缓存?</string>
    <string name="quit_login_hint">是否退出登录</string>
    <string name="id">ID</string>
    <string name="password">密码</string>
    <string name="login_safe">登录保护</string>
    <string name="not_bind_phone">未绑定</string>
    <string name="not_set">未设置</string>
    <string name="not_open">未开启</string>
    <string name="is_open">已开启</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="voice_code">语音验证码</string>
    <string name="voice_code_tip">收不到短信?使用</string>
    <string name="set_password_title">设置密码</string>
    <string name="modify_password_title">修改密码</string>
    <string name="forget_password_title">找回密码</string>
    <string name="modify">修改</string>
    <string name="modify_password_error_tip">两次输入的密码不相同.</string>
    <string name="old_password_tip">旧密码:</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password_tip">新密码:</string>
    <string name="new_password_hint">6-16位长度</string>
    <string name="confirm_password_tip">确认新密码:</string>
    <string name="confirm_password_hint">再次输入新密码</string>
    <string name="password_tip">密码:</string>
    <string name="password_hint2">6-16位长度</string>
    <string name="confirm_password_tip2">确认密码:</string>
    <string name="confirm_password_hint2">再次输入密码</string>
    <string name="login_protect_title">登录保护</string>
    <string name="open_login_protect_tip">开启后, 再其他设备上登录需要短信验证码</string>
    <string name="language">多语言</string>
    <string name="zh">中文</string>
    <string name="en">English</string>
    <string name="edit_into_title">编辑个人资料</string>
    <string name="photo_wall_tip">一次可上传多张图片,点击可查看和删除照片, 长按可以排序</string>
    <string name="modify_name_title">修改昵称</string>
    <string name="input_name_hint">请输入昵称</string>
    <string name="signature_title">个性签名</string>
    <string name="name_text">昵称</string>
    <string name="save_ok_tip">保存成功</string>
    <string name="birthday">年龄</string>
    <string name="birthday2">生日</string>
    <string name="birthday_format">%1$d 岁</string>
    <string name="area">地区</string>
    <string name="edit_info_quit_tip">您的个人资料已经修改, 退出前要保存吗?</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="my_code">我的名片</string>
    <string name="create_qr_tip">二维码生成中...</string>
    <string name="tags_manage_title">标签管理</string>
    <string name="hot_tags_manage_title">频道管理</string>
    <string name="signature_empty_tip">此人很懒, 什么也没有留下.</string>
    <string name="address_empty_tip">此人很懒, 什么也没有留下.</string>
    <string name="introduce_empty_tip">此人很懒, 什么也没有留下.</string>
    <string name="unattention_tip2">你们是好友,取消关注后将会解除好友,你们将从各自的联系人列表中消失,对方不会收到任何提示</string>
    <string name="collect">收藏</string>
    <string name="klj_info">哈喽, 大家好, 我是恐龙君, 你的专属小秘书, 为你提供全方位的服务.
                            如果有任何不爽或者建议, 欢迎通过以下方式联系我们, 很高兴能给我们提供意见和建议.</string>
    <string name="line_phone">客服热线</string>
    <string name="email">邮件</string>
    <string name="qq_qun">QQ群</string>
    <string name="weixin_friend_tip">微信好友</string>
    <string name="weixin_circle_tip">微信朋友圈</string>
    <string name="weixin_circle">朋友圈</string>
    <string name="qq_friend_tip">QQ好友</string>
    <string name="qq_qzone_tip">QQ空间</string>
    <string name="cancel">取消</string>
    <string name="copy">复制</string>
    <string name="search_music_tip">搜索音乐</string>
    <string name="downed_music_tip">已下载的音乐</string>
    <string name="empty_music_tip">暂无音乐, 你可以搜索添加音乐</string>
    <string name="text_klg_phone_number">0755-26418647</string>
    <string name="text_klj_email">konglonggu@hotniao.com</string>
    <string name="text_klg_qq">280491671</string>
</resources>