<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--中部-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_xhdpi"/>

        <com.angcyo.uiview.widget.ItemInfoLayout
            android:id="@+id/account_safe_layout"
            style="@style/DefaultItemInfoStyle"
            app:item_text="@string/account_safe"/>

        <!--中部-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_xhdpi"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clipToPadding="false"
            android:divider="@drawable/base_shape_line"
            android:orientation="vertical"
            android:paddingStart="@dimen/base_xhdpi"
            android:showDividers="middle">

            <com.angcyo.uiview.widget.ItemInfoLayout
                android:id="@+id/message_notify_layout"
                style="@style/DefaultItemInfoOffsetStyle"
                app:item_text="@string/message_notify"/>

            <com.angcyo.uiview.widget.ItemInfoLayout
                android:id="@+id/conceal_layout"
                style="@style/DefaultItemInfoOffsetStyle"
                app:item_text="@string/conceal"/>

            <com.angcyo.uiview.widget.ItemInfoLayout
                android:id="@+id/currency_layout"
                style="@style/DefaultItemInfoOffsetStyle"
                app:item_text="@string/currency"/>
        </LinearLayout>

        <!--中部-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_xhdpi"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clipToPadding="false"
            android:divider="@drawable/base_shape_line"
            android:orientation="vertical"
            android:paddingStart="@dimen/base_xhdpi"
            android:showDividers="middle">

            <com.angcyo.uiview.widget.ItemInfoLayout
                android:id="@+id/feedback_layout"
                style="@style/DefaultItemInfoOffsetStyle"
                app:item_text="@string/feedback"/>

            <com.angcyo.uiview.widget.ItemInfoLayout
                android:id="@+id/faq_layout"
                style="@style/DefaultItemInfoOffsetStyle"
                app:item_text="@string/faq"/>

            <com.angcyo.uiview.widget.ItemInfoLayout
                android:id="@+id/about_me_layout"
                style="@style/DefaultItemInfoOffsetStyle"
                app:item_text="@string/about_me"/>

            <com.angcyo.uiview.widget.ItemInfoLayout
                android:id="@+id/user_agreement_layout"
                style="@style/DefaultItemInfoOffsetStyle"
                app:item_text="@string/user_agreement"/>
        </LinearLayout>

        <TextView
            android:id="@+id/quit_login_layout"
            style="@style/WhiteColorTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_xxxhdpi"
            android:background="@drawable/main_color_bg_selector"
            android:gravity="center"
            android:padding="@dimen/base_xhdpi"
            android:text="@string/quit_login"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>