<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--中部-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_xhdpi"/>

        <com.angcyo.uiview.widget.ItemInfoLayout
            android:id="@+id/user_id_layout"
            style="@style/DefaultItemInfoStyle"
            app:item_text="@string/id"/>

        <!--中部-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_xhdpi"/>

        <com.angcyo.uiview.widget.ItemInfoLayout
            android:id="@+id/user_phone_layout"
            style="@style/DefaultItemInfoStyle"
            app:item_text="@string/phone_number2"/>

        <!--中部-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_xhdpi"/>

        <com.angcyo.uiview.widget.ItemInfoLayout
            android:id="@+id/user_pw_layout"
            style="@style/DefaultItemInfoStyle"
            app:item_text="@string/password"/>

        <!--中部-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_xhdpi"/>

        <com.angcyo.uiview.widget.ItemInfoLayout
            android:id="@+id/login_safe_layout"
            style="@style/DefaultItemInfoStyle"
            app:item_text="@string/login_safe"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>