<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/share_wx"
        style="@style/DarkTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="@dimen/base_ldpi"
        android:drawableTop="@drawable/wechat_selector"
        android:gravity="center"
        android:text="@string/weixin_friend_tip"/>

    <TextView
        android:id="@+id/share_wxc"
        style="@style/DarkTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="@dimen/base_ldpi"
        android:drawableTop="@drawable/friendscircle_selector"
        android:gravity="center"
        android:text="@string/weixin_circle_tip"/>

    <TextView
        android:id="@+id/share_qq"
        style="@style/DarkTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="@dimen/base_ldpi"
        android:drawableTop="@drawable/qq_selector2"
        android:gravity="center"
        android:text="@string/qq_friend_tip"/>

    <TextView
        android:id="@+id/share_qqz"
        style="@style/DarkTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="@dimen/base_ldpi"
        android:drawableTop="@drawable/share_qzone_selector"
        android:gravity="center"
        android:text="@string/qq_qzone_tip"/>

</LinearLayout>