<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/default_base_white"
              android:orientation="vertical">

    <com.angcyo.uiview.widget.RTextView
        android:id="@+id/title_view"
        style="@style/MainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/base_xxhdpi"
        android:text="@string/share"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_klg"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/haoyou_qun_2_selector"
            android:gravity="center"
            android:text="好友和群"/>

        <TextView
            android:id="@+id/share_wx"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/wechat_selector"
            android:gravity="center"
            android:text="@string/weixin_friend_tip"/>

        <TextView
            android:id="@+id/share_wxc"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/friendscircle_selector"
            android:gravity="center"
            android:text="@string/weixin_circle"/>

        <TextView
            android:id="@+id/share_qq"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/qq_selector2"
            android:gravity="center"
            android:text="@string/qq_friend_tip"/>

        <TextView
            android:id="@+id/share_qqz"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/share_qzone_selector"
            android:gravity="center"
            android:text="@string/qq_qzone_tip"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line"
        android:layout_marginBottom="@dimen/base_xhdpi"
        android:layout_marginTop="@dimen/base_xhdpi"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/follow_view"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/share_guanzhu_selector"
            android:gravity="center"
            android:text="@string/follow"/>

        <com.angcyo.uiview.widget.RTextView
            android:id="@+id/collect_view"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/share_shouchang_selector"
            android:gravity="center"
            android:text="@string/collect"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/report_view"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/share_jubao_selector"
            android:gravity="center"
            android:text="@string/report"/>

        <TextView
            android:id="@+id/copy_view"
            style="@style/DarkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/base_ldpi"
            android:drawableTop="@drawable/share_fuzhi_selector"
            android:gravity="center"
            android:text="@string/copy"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line"
        android:layout_marginBottom="@dimen/base_xhdpi"
        android:layout_marginTop="@dimen/base_xhdpi"
        android:background="@color/line_color"/>


    <com.angcyo.uiview.widget.RTextView
        android:id="@+id/cancel_view"
        style="@style/MainTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:background="@drawable/base_bg_selector"
        android:gravity="center"
        android:text="@string/cancel"/>


</LinearLayout>